Avoid newcontentmenu footer overlap

--- a/admin/assets/less/admin/mura-grid.less
+++ b/admin/assets/less/admin/mura-grid.less
@@ -1891,6 +1891,7 @@ p + .mura-table-grid { margin-top: 12px;}
 	border-radius: 1px;
 	box-shadow: 1px 3px 18px rgba(0,0,0,.35);
 	font-size: 13px;
+	margin-bottom: 46px;
 	padding: 0;
 	position: absolute;
 	width: 160px;
